crates/hir-ty/tests/snapshots/jls_decl_checks__override_record_accessor.snap
---
source: crates/hir-ty/tests/jls_decl_checks.rs
expression: out
---
FILE /src/com/example/Meta.java:
package com.example;

import java.util.List;
import java.util.regex.Pattern;

record Meta(List<Pattern> headerPatterns, List<String> lineContents) {
    @Override
    public List<Pattern> headerPatterns() {
        return headerPatterns;
    }
}
