crates/hir-ty/tests/snapshots/jls_decl_checks__package_private_class_ok.snap
---
source: crates/hir-ty/tests/jls_decl_checks.rs
assertion_line: 399
expression: out
---
FILE /src/com/example/Zed.java:
package com.example;

class Zed {}
class Other {}
