crates/hir-ty/tests/snapshots/jls_decl_checks__public_class_name_mismatch.snap
---
source: crates/hir-ty/tests/jls_decl_checks.rs
expression: out
---
FILE /src/com/example/Foo.java:
package com.example;

public class Zed {}

@2:13: class-public-should-be-in-file: Class 'Zed' is public; it should be declared in a file named 'Zed.java'
