crates/hir-ty/tests/snapshots/jls_decl_checks__public_class_wrong_file.snap
---
source: crates/hir-ty/tests/jls_decl_checks.rs
expression: out
---
FILE /src/com/example/Zed.java:
package com.example;

public class Zed {}
public class Other {}

method : class-public-should-be-in-file: @3:13Class 'Other' is public; it should be declared in a file named 'Other.java'
